<resources>
    <string name="app_name">Uiza LiveV5</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="menu_del">Remove</string>

    <!-- Video Preferences -->
    <string name="video_title">Video</string>

    <string name="camera_title">Camera</string>
    <string name="video_size_title">Video size</string>
    <string name="fps_title">Fps</string>
    <string name="encoder_title">Encoder</string>
    <string name="bitrate_title">Bitrate</string>
    <string name="adaptive_bitrate_title">Adaptive bitrate</string>
    <string name="keyframe_title">Keyframe frequency</string>
    <string name="format_title">Format</string>

    <!-- Sync Preferences -->
    <string name="audio_title">Audio</string>
    <string name="channel_title">Channel count</string>
    <string name="sample_rate_title">Sample rate</string>
</resources>
